# RubiksCubeMonteCarlo

./: README.md  pyproject.toml
graphical_analysis/: graphical_analysis.vsz
outputs/: moments_convergence_shuffle_1.csv  moments_convergence_shuffle_2.csv  moments_convergence_shuffle_3.csv  moments_convergence_shuffle_4.csv  moments_convergence_shuffle_5.csv  results_1000.csv  results_500.csv
src/: monte_carlo.py  rubiks_cube.py  some_statistics.py
